[gd_scene load_steps=4 format=3 uid="uid://gh0d5plx1q04"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_iuk5n"]
[ext_resource type="Texture2D" uid="uid://fcwm736euviq" path="res://assets/gameover.png" id="2_pfxyy"]
[ext_resource type="Texture2D" uid="uid://bpyhvjd0tw8f5" path="res://assets/rock2.png" id="3_sww40"]

[node name="gameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iuk5n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(404, 394)
texture = ExtResource("2_pfxyy")

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 369.0
offset_top = 153.0
offset_right = 472.0
offset_bottom = 193.0
text = "Quit"
icon = ExtResource("3_sww40")

[node name="replay" type="Button" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 154.0
offset_right = 362.0
offset_bottom = 194.0
text = "Replay"
icon = ExtResource("3_sww40")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 203.0
offset_right = 382.0
offset_bottom = 234.0
placeholder_text = "username"
max_length = 3

[node name="submit" type="Button" parent="LineEdit"]
layout_mode = 0
offset_left = 124.0
offset_right = 187.0
offset_bottom = 31.0
text = "Submit"

[node name="LeaderBoardContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 277.0
offset_right = 620.0
offset_bottom = 691.0
theme_override_constants/separation = 25

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="LineEdit/submit" to="." method="_on_submit_pressed"]
